# ml_ops102

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MISSING_COMPONENTS.md  README.md  cloudbuild.yaml  cloudbuildapi.yaml  cloudbuildfrontend.yaml  cloudbuildtrain.yaml  config_cpu.yaml  config_gpu.yaml  index.html  objects.inv  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: docs.yaml  linting.yaml  tests.yaml
configs/: config.yaml  config_cloud.yaml  config_gpu.yaml
data/raw/: .gitignore  News.csv.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: README.md  mkdocs.yaml
docs/source/: index.md  local-setup.md  workflow.md
local-setup/: index.html
models/: .gitignore  model.pt.dvc  model_optimized.onnx.dvc  vocab.json.dvc
reports/: README.md
search/: search_index.json
src/mlops_project/: api.py  compare_optimized.py  data.py  evaluate.py  frontend.py  model.py  optimize.py  train.py  visualize.py  visualize_metrics.py
tests/: test_data.py  test_model.py
tests/fixtures/: test.pt  train.pt  val.pt
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py
workflow/: index.html
